# kidsEnglish

./: .gitignore  BROWSER_SUPPORT_FIX.md  CLAUDE.md  CODEBUDDY.md  DEPLOYMENT_GUIDE.md  FIX_SUMMARY.md  HTTPS_SETUP.md  MICROPHONE_FIX.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RECORD_PAGE_BLANK_FIX.md  linus.md
.claude/: settings.local.json
backend/: .env.example  README.md  create_database.sql  create_db.sh  init_db.py  pyproject.toml  start.sh  test_auth_local.py
backend/app/: config.py  main.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/routers/: auth.py  progress.py  speech.py
backend/app/schemas/: schemas.py
backend/app/services/: aliyun_speech.py  whisper_speech.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: diagnostic.html
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: auth.js  http.js  progress.js  speech.js
frontend/src/assets/animations/: index.js
frontend/src/assets/audio/: README.md
frontend/src/assets/images/: README.md
frontend/src/components/: LetterCard.vue  LottieAnimation.vue
frontend/src/composables/: useAudio.js
frontend/src/router/: index.js
frontend/src/stores/: learning.js  user.js
frontend/src/utils/: performance.js
frontend/src/views/: Home.vue  Learn.vue  Login.vue  Progress.vue  Record.vue
frontend/ssl/: server.crt  server.key
plan/: lucky-squishing-parnas.md
